<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#2794A8"
    android:layout_height="match_parent"

    android:layoutDirection="ltr"
    android:orientation="vertical">

    <TextView
        android:id="@+id/temp_choice"
        android:layout_width="35dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textColor="#ffff"
        android:textSize="12sp"
        app:fontFamily="@font/amatic_sc"
        app:layout_constraintEnd_toEndOf="@+id/first"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/first"
        app:layout_constraintTop_toTopOf="@+id/first" />

    <TextView

        android:id="@+id/spring_name"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/spring_name_placeholder"
        android:textSize="45sp"
        app:fontFamily="@font/amatic_sc"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_choice"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/description"
        android:layout_width="354dp"
        android:layout_height="218dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/spring_description_placeholder"
        android:textColor="#ffff"
        android:textSize="27sp"
        app:fontFamily="@font/amatic_sc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spring_name"
        app:layout_constraintVertical_bias="0.0"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:maxLines="100"
        android:scrollbars="vertical"/>

    <ImageView
        android:id="@+id/spring_picture"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/navigate2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="164dp"
        android:background="@mipmap/circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/navigate1"
        android:layout_width="28dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="172dp"
        android:background="@mipmap/group_66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/third"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="172dp"
        app:layout_constraintStart_toEndOf="@+id/navigate2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/circle" />

    <Button
        android:id="@+id/deepness"
        android:layout_width="29dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/group_81"
        app:layout_constraintEnd_toEndOf="@+id/third"
        app:layout_constraintStart_toStartOf="@+id/third"
        app:layout_constraintTop_toTopOf="@+id/third" />

    <ImageView
        android:id="@+id/second"
        android:layout_width="50dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="172dp"
        app:layout_constraintStart_toEndOf="@+id/third"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/circle" />


    <Button
        android:id="@+id/area"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/gps"
        app:layout_constraintBottom_toBottomOf="@+id/title7"
        app:layout_constraintEnd_toEndOf="@+id/second"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/second"
        app:layout_constraintTop_toTopOf="@+id/second"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/first"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="172dp"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/circle" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="172dp"
        app:layout_constraintStart_toEndOf="@+id/second"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/circle" />


    <TextView
        android:id="@+id/title2"
        android:layout_width="35dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/temp_title"
        android:textSize="12sp"
        app:fontFamily="@font/amatic_sc"
        app:layout_constraintEnd_toEndOf="@+id/first"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/first"
        app:layout_constraintTop_toTopOf="@+id/first" />

    <TextView
        android:id="@+id/title5"
        android:layout_width="35dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/deep_title"
        android:textSize="12sp"
        app:fontFamily="@font/amatic_sc"
        app:layout_constraintEnd_toEndOf="@+id/third"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/third"
        app:layout_constraintTop_toTopOf="@+id/third" />

    <TextView
        android:id="@+id/deep_choice"
        android:layout_width="35dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textColor="#ffff"
        android:textSize="12sp"
        app:fontFamily="@font/amatic_sc"
        app:layout_constraintEnd_toEndOf="@+id/third"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/third"
        app:layout_constraintTop_toTopOf="@+id/third" />

    <TextView
        android:id="@+id/title7"
        android:layout_width="35dp"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/area_title"
        android:textSize="12sp"
        app:fontFamily="@font/amatic_sc"
        app:layout_constraintEnd_toEndOf="@+id/second"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/second"
        app:layout_constraintTop_toTopOf="@+id/second" />

    <TextView
        android:id="@+id/area_choice"
        android:layout_width="59dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textColor="#ffff"
        android:textSize="12sp"
        app:fontFamily="@font/amatic_sc"
        app:layout_constraintEnd_toEndOf="@+id/second"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="@+id/second"
        app:layout_constraintTop_toTopOf="@+id/second" />

    <TextView
        android:id="@+id/title6"
        android:layout_width="35dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/level_title"
        android:textSize="12sp"
        app:fontFamily="@font/amatic_sc"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <TextView
        android:id="@+id/level_choice"
        android:layout_width="35dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textColor="#ffff"
        android:textSize="12sp"
        app:fontFamily="@font/amatic_sc"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <Button
        android:id="@+id/level"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/ruler"
        app:layout_constraintBottom_toBottomOf="@+id/title6"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/temprature"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/fire_white"
        app:layout_constraintBottom_toBottomOf="@+id/title2"
        app:layout_constraintEnd_toEndOf="@+id/first"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/first"
        app:layout_constraintTop_toTopOf="@+id/first"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>